--- a/templates/apply_for_job.html
+++ b/templates/apply_for_job.html
@@ -2,7 +2,7 @@
 <title>Job Finder</title>{%endblock title%} {% block body%}
 <div class="container">
     <h1 class='text-center'>Job Finder</h1>
-    <h2 class="text-center">Apply For Job</h2>
+    <h2 class="text-center">The Job You Want</h2>
     <style>
         h1 {
             color: yellow;
