--- a/templates/form.html
+++ b/templates/form.html
@@ -23,7 +23,7 @@
     <br>
     <div class="p-3 mb-2 bg-success text-black">
         <a class="text-center" href="/ApplyForJob">
-            <h3>Apply for job</h3>
+            <h3>The Job You Want</h3>
         </a>
     </div>
     <div class="p-3 mb-2 bg-danger text-black">
