--- a/templates/vacancie.html
+++ b/templates/vacancie.html
@@ -20,6 +20,16 @@
     <form action="/vacancie" method="POST">
         <div class="form-row">
             <div class="form-group col-md-6">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" name="email">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="inputPassword4">Password</label>
+                <input type="password" class="form-control" id="inputPassword4" name="password">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
                 <label for="inputJob" title="Enter the type of job you want to hire. Eg.Software Engineer, Accountant">Job</label>
                 <input type="text" class="form-control" id="inputJob_type" name="job_type">
             </div>
