--- a/templates/settings.html
+++ b/templates/settings.html
@@ -15,16 +15,16 @@
     }
     
     a:hover {
-        color: yellow;
+        color: rgb(21, 255, 0);
     }
 </style>
 
 <h1 class='text-center'>Job Finder</h1>
 <h2 class='text-center'>Settings Page</h2>
 <div class="container">
-    <div class="p-3 mb-2 bg-success text-black">
-        <a class="text-center" href="/accountstatus">
-            <h3>Account Status</h3>
+    <div class="p-3 mb-2 bg-warning text-black">
+        <a class="text-center" href="/deletevacancie">
+            <h3>Delete Your Vacancie</h3>
         </a>
     </div>
     <div class="p-3 mb-2 bg-danger text-black">
