--- a/templates/apply_for_job.html
+++ b/templates/apply_for_job.html
@@ -19,6 +19,20 @@
     <form action="/ApplyForJob" method="POST">
         <div class="form-row">
             <div class="form-group col-md-6">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" name="email">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="inputPassword4">Password</label>
+                <input type="password" class="form-control" id="inputPassword4" name="password">
+            </div>
+            <div class="form-group col-md-12">
+                <label for="inputLocation">City</label>
+                <input type="text" class="form-control" id="inputLocation" name="location">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
                 <label for="inputJob" title="Enter the type of job you want. Eg.Software Engineer">Job</label>
                 <input type="text" class="form-control" id="inputJob_type" name="job_type">
             </div>
