--- a/templates/vacancie.html
+++ b/templates/vacancie.html
@@ -30,6 +30,17 @@
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
+                <label for="inputCompany">Name of the Company</label>
+                <input type="text" class="form-control" id="inputCompany" name="company">
+            </div>
+
+            <div class="form-group col-md-6">
+                <label for="inputLocation">City</label>
+                <input type="text" class="form-control" id="inputLocation" name="location">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
                 <label for="inputJob" title="Enter the type of job you want to hire. Eg.Software Engineer, Accountant">Job</label>
                 <input type="text" class="form-control" id="inputJob_type" name="job_type">
             </div>
